<resources>
    <string name="app_name">ListenApp!</string>
    <string name="login_options">OU ENTRE COM</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="loginBtnTxt">LOGIN</string>
    <string name="criarContaBtnTxt">CRIAR CONTA</string>
    <string name="got_account">JÁ É CADASTRADO?</string>
    <string name="user">Usuário</string>
    <string name="app_logo">APP Logo</string>
    <string name="pw">Senha</string>
    <string name="pw_repeat">Confirme a Senha</string>
    <string name="empty_fields_msg">Preencha corretamente os campos</string>
    <string name="new_account">Não é cadastrado?</string>
    <string name="menu_news">Notícias</string>
    <string name="menu_music">Músicas</string>
    <string name="menu_playlist">Playlists</string>
    <string name="menu_profile">Perfil</string>
    <string name="quantity_playlists">X Playlists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_press_msg">Pessione VOLTAR novamente para voltar à tela anterior</string>
    <string name="Answer_yes">Sim</string>
    <string name="Answer_no">Não</string>
    <string name="act_end_title">Encerrar A Sessão?</string>
    <string name="act_end_msg">Deseja Realmente Encerrar A Sessão?</string>
    <string name="act_end_tag">User Confirmation</string>
    <string name="news_title">Top Notícias</string>
    <string name="playlists_title">Playlists</string>
    <string name="playlist_search_hint">Procurar Playlist</string>
    <string name="new_playlist">NOVA PLAYLIST</string>
    <string name="playlist_hint">Nome Da Nova Playlist</string>
    <string name="top_artists">Top Artistas</string>
    <string name="name_playlist">Nomeie sua Playlist</string>
    <string name="playlist_new_msg">Você ainda não criou uma playlist, crie uma para adicionar uma música aos favoritos.</string>
    <string name="about_listen_app"> Dio: Oh ? You\'re approaching me ? Instead of running away, you\'re coming right to me ?
        Jotaro: I can\'t beat the shit out of you without getting closer !
       </string>
    <string name="back_btn">Voltar</string>

// facebook
    <string name="facebook_app_id">752894998585956</string>
    <string name="fb_login_protocol_scheme">fb752894998585956</string>
    <string name="escolher_imagem_edit">Escolha uma imagem.</string>
    <string name="name_alter_hint">Alterar nome</string>
    <string name="confirmar_btn_edit">Confirmar</string>

</resources>
