<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"/>

    <View
        android:id="@+id/logo_detail"
        android:layout_width="200dp"
        android:layout_height="6dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logoApp"/>

    <ImageView
        android:id="@+id/name_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_detail"
        app:srcCompat="@drawable/ic_profile"/>

    <Button
        android:id="@+id/change_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/round_button"
        android:text="@string/escolher_imagem_edit"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_user"
        app:layout_constraintBottom_toTopOf="@id/user_alter_field"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_alter_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@id/change_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_Button"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_user_alter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name_alter_hint"
            android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/round_button"
        android:text="@string/confirmar_btn_edit"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/user_alter_field"
        />



</android.support.constraint.ConstraintLayout>

