<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />
    <View
        android:id="@+id/logo_detail"
        android:layout_width="200dp"
        android:layout_height="6dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logoApp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_user_const"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"

        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/input_pw_const"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoApp"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_login_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pw_const"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_log_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_user_const">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pw_login_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pw"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm_log_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/round_button"
        android:text="@string/loginBtnTxt"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/toNewAccOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/toNewAccOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/new_account"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toNewAcc_Button"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/toNewAcc_Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button"
        android:text="@string/criarContaBtnTxt"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/login_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/spacer_left"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@+id/face_Button_lg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_options"/>

    <TextView
        android:id="@+id/login_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/login_options"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spacer_right"
        app:layout_constraintStart_toEndOf="@id/spacer_left"/>

    <View
        android:id="@+id/spacer_right"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/spacers"
        android:backgroundTint="@color/grey_200"
        app:layout_constraintBottom_toTopOf="@+id/google_Button_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_options"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_google"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:elevation="2dp"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
    />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:elevation="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_options"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>

